--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 activityCompose = "1.10.0"
 kotlin = "2.1.0"
-wgpu4k = "0.0.1"
+wgpu4k = "0.0.3-SNAPSHOT"
 korge = "6.0.0"
 coroutines = "1.9.0"
 agp = "8.7.3"
