--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-activityCompose = "1.9.2"
-kotlin = "2.0.20"
-wgpu4k = "preview-3"
+activityCompose = "1.10.0"
+kotlin = "2.1.0"
+wgpu4k = "0.0.3-SNAPSHOT"
 korge = "6.0.0"
 coroutines = "1.9.0"
-agp = "8.5.2"
+agp = "8.7.3"
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
