--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-activityCompose = "1.10.0"
-kotlin = "2.1.0"
-wgpu4k = "0.0.3"
+activityCompose = "1.10.1"
+kotlin = "2.1.21"
+wgpu4k = "0.1.0"
 korge = "6.0.0"
-coroutines = "1.10.1"
-agp = "8.7.3"
+coroutines = "1.10.2"
+agp = "8.9.3"
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -13,6 +13,6 @@ korge-foundation = { module = "com.soywiz:korlibs-math", version.ref = "korge" }
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 
 [plugins]
-kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-androidApplication = { id = "com.android.application", version.ref = "agp" }
-androidLibrary = { id = "com.android.library", version.ref = "agp" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
